--- a/package.json
+++ b/package.json
@@ -26,5 +26,18 @@
   },
   "dependencies": {
     "axios": "^1.2.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Robel-shewan/node-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Robel-shewan/node-sdk/issues"
+  },
+  "publishConfig": {
+    "access": "public",
+    "branches": [
+      "main"
+    ]
   }
 }
